--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -116,4 +116,8 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
 }
+
+.container .right .bottom span {
+  font-size: 1rem;
+}
 /*# sourceMappingURL=Homepage.css.map */
