--- a/src/components/css/Homepage.scss
+++ b/src/components/css/Homepage.scss
@@ -75,6 +75,10 @@
         font-family: "Montserrat", sans-serif;
         font-weight: 600;
       }
+      span {
+        font-size: 1rem;
+        // line-height: 5rem;
+      }
     }
   }
 }
