--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -41,6 +41,8 @@ nav form .input-group {
   border-radius: 25px;
   border: 5px solid #6c64ef;
   background-color: white;
+  -webkit-box-shadow: 0px 3px 10px white;
+          box-shadow: 0px 3px 10px white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,7 +60,7 @@ nav form .input-group span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-right: 0.5px solid grey;
+  border-right: 0.1px solid #919191;
 }
 
 nav form .input-group span .location-icon {
@@ -75,6 +77,7 @@ nav form .input-group input {
   font-family: "Source Sans Pro", sans-serif;
   -webkit-box-sizing: unset;
           box-sizing: unset;
+  color: #919191;
 }
 
 nav ul {
@@ -116,5 +119,98 @@ nav ul li:hover::before {
 
 a {
   text-decoration: none;
+}
+
+@media only screen and (max-width: 1260px) {
+  nav .brand-logo {
+    font-size: 2rem;
+  }
+  nav .brand-logo .weather-icon {
+    font-size: 2rem;
+  }
+  nav form .input-group {
+    border: 4px solid #6c64ef;
+    -webkit-box-shadow: 0px 1px 5px white;
+            box-shadow: 0px 1px 5px white;
+  }
+  nav form .input-group span {
+    width: 45px;
+    height: 40px;
+  }
+  nav form .input-group span .location-icon {
+    font-size: 1.5rem;
+  }
+  nav form .input-group input {
+    width: 200px;
+    padding: 0px 5px;
+    font-size: 1rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  nav ul {
+    font-size: 1.3rem;
+  }
+}
+
+@media only screen and (max-width: 940px) {
+  nav .brand-logo {
+    font-size: 1.4rem;
+  }
+  nav .brand-logo .weather-icon {
+    font-size: 1.4rem;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  nav form .input-group span {
+    width: 35px;
+    height: 30px;
+  }
+  nav form .input-group span .location-icon {
+    font-size: 1.3rem;
+  }
+  nav form .input-group input {
+    width: 160px;
+  }
+  nav ul {
+    font-size: 1.2rem;
+  }
+  nav ul li {
+    margin: 0px 20px;
+    padding-bottom: 6px;
+  }
+  nav ul li::before {
+    height: 1px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  nav {
+    padding: 25px 30px;
+  }
+  nav ul {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  nav {
+    padding: 20px 20px;
+  }
+  nav .brand-logo {
+    font-size: 1.2rem;
+  }
+  nav .brand-logo .weather-icon {
+    font-size: 1.2rem;
+  }
+  nav form .input-group {
+    border: 2px solid #6c64ef;
+  }
+  nav form .input-group span {
+    width: 35px;
+    height: 30px;
+  }
+  nav form .input-group input {
+    width: 110px;
+  }
 }
 /*# sourceMappingURL=Navbar.css.map */
