--- a/src/components/css/Navbar.scss
+++ b/src/components/css/Navbar.scss
@@ -26,6 +26,7 @@ nav {
       border-radius: 25px;
       border: 5px solid #6c64ef;
       background-color: white;
+      box-shadow: 0px 3px 10px rgba($color: #ffffff, $alpha: 1);
       display: flex;
       span {
         width: 50px;
@@ -33,7 +34,7 @@ nav {
         display: flex;
         justify-content: center;
         align-items: center;
-        border-right: 0.5px solid grey;
+        border-right: 0.1px solid #919191;
         .location-icon {
           font-size: 2rem;
           color: #6c64ef;
@@ -47,6 +48,7 @@ nav {
         font-size: 1rem;
         font-family: "Source Sans Pro", sans-serif;
         box-sizing: unset;
+        color: #919191;
       }
     }
   }
@@ -84,4 +86,108 @@ nav {
 
 a {
   text-decoration: none;
+}
+
+@media only screen and (max-width: 1260px) {
+  nav {
+    .brand-logo {
+      font-size: 2rem;
+      .weather-icon {
+        font-size: 2rem;
+      }
+    }
+
+    form {
+      .input-group {
+        border: 4px solid #6c64ef;
+        box-shadow: 0px 1px 5px rgba($color: #ffffff, $alpha: 1);
+        span {
+          width: 45px;
+          height: 40px;
+          .location-icon {
+            font-size: 1.5rem;
+          }
+        }
+        input {
+          width: 200px;
+          padding: 0px 5px;
+          font-size: 1rem;
+          box-sizing: border-box;
+        }
+      }
+    }
+
+    ul {
+      font-size: 1.3rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 940px) {
+  nav {
+    .brand-logo {
+      font-size: 1.4rem;
+      .weather-icon {
+        font-size: 1.4rem;
+        transform: translate(0);
+      }
+    }
+    form {
+      .input-group {
+        span {
+          width: 35px;
+          height: 30px;
+          .location-icon {
+            font-size: 1.3rem;
+          }
+        }
+        input {
+          width: 160px;
+        }
+      }
+    }
+    ul {
+      font-size: 1.2rem;
+      li {
+        margin: 0px 20px;
+        padding-bottom: 6px;
+      }
+      li::before {
+        height: 1px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  nav {
+    padding: 25px 30px;
+    ul {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  nav {
+    padding: 20px 20px;
+    .brand-logo {
+      font-size: 1.2rem;
+      .weather-icon {
+        font-size: 1.2rem;
+      }
+    }
+    form {
+      .input-group {
+        span {
+          width: 35px;
+          height: 30px;
+        }
+        border: 2px solid #6c64ef;
+        input {
+          width: 110px;
+        }
+      }
+    }
+  }
 }
